acquire cache improve ments

--- a/todo
+++ b/todo
@@ -12,7 +12,7 @@ access part/join/kick/nick - just have 'admins' in config
 
 > limit store set amount to 200 characters
 > .bots standard
-acquire - just get the first command
+> acquire - use cache instead of always checking the latest version
 cache versions are displayed as 1.1.1 for things that aren't at 1.1.1 for some reason
 redditVideoURL builtin
 amazon / soundcloud url parsing / set Accept-language header
