--- a/todo
+++ b/todo
@@ -13,10 +13,11 @@ access part/join/kick/nick - just have 'admins' in config
 > limit store set amount to 200 characters
 > .bots standard
 > acquire - use cache instead of always checking the latest version
+> create acquire cache directory if it doesn't exist
+stop bulk command editing
 cache versions are displayed as 1.1.1 for things that aren't at 1.1.1 for some reason
 redditVideoURL builtin
 amazon / soundcloud url parsing / set Accept-language header
-stop bulk command editing
 pass command parsing in, replace in command.random and repeat
 add breakhighlight to api
 reauth on ~nick change
