--- a/todo
+++ b/todo
@@ -14,13 +14,14 @@ access part/join/kick/nick - just have 'admins' in config
 > .bots standard
 > acquire - use cache instead of always checking the latest version
 > create acquire cache directory if it doesn't exist
+> cache versions are displayed as 1.1.1 for things that aren't at 1.1.1 for some reason
+fix ~google
+reauth on ~nick change
 stop bulk command editing
-cache versions are displayed as 1.1.1 for things that aren't at 1.1.1 for some reason
-redditVideoURL builtin
 amazon / soundcloud url parsing / set Accept-language header
+redditVideoURL builtin
 pass command parsing in, replace in command.random and repeat
 add breakhighlight to api
-reauth on ~nick change
 
 ====
 
