--- a/todo
+++ b/todo
@@ -15,8 +15,8 @@ access part/join/kick/nick - just have 'admins' in config
 > acquire - use cache instead of always checking the latest version
 > create acquire cache directory if it doesn't exist
 > cache versions are displayed as 1.1.1 for things that aren't at 1.1.1 for some reason
-fix ~google
-reauth on ~nick change
+> fix ~google
+> reauth on ~nick change
 stop bulk command editing
 amazon / soundcloud url parsing / set Accept-language header
 redditVideoURL builtin
