--- a/todo
+++ b/todo
@@ -10,6 +10,7 @@ strip only starred commands for github ?
 access part/join/kick/nick - just have 'admins' in config
 provida toQueryString
 redditVideoURL builtin
+create nibblr user
 
 ====
 
