better title parsing for various links

--- a/todo
+++ b/todo
@@ -11,6 +11,11 @@ access part/join/kick/nick - just have 'admins' in config
 provida toQueryString
 redditVideoURL builtin
 create nibblr user
+truncate log messages (or also how nibblr saves itself to log)
+
+https://gfycat.com/SourImaginaryAfricanrockpython
+https://kotaku.com/report-new-nintendo-switch-model-coming-in-2019-1829513370
+https://gamefaqs.gamespot.com/pc/648805-osu
 
 ====
 
