--- a/todo
+++ b/todo
@@ -1,9 +1,10 @@
 // TODO //
 
-    poker(query, text) { store.'running' poker.reset
-    Buy in is ... bet or fold
-    august fools
 ~> 'e'.repeat(1e9) bug
+IRC.setNick(Math.random()) === nuke
+
+asAdmin(() => {
+});
 
 ====
 
