--- a/todo
+++ b/todo
@@ -1,15 +1,25 @@
-reboot|git|update|join|part|mode|topic|kick|nick
+reboot|git|update|join|part|mode|topic|kick|nick|redirect
 
 // TODO //
 
+Error: -> {r}>>{/}
+Notice: -> {b}>>{/}
+Success: -> {g}>>{/}
+print.err, .info, .success
 ~pipe
+IRC.auth
+multiple triggers
+~help.games
+use WZRD.in for modules
+~ignore
+19:51 <&nibblr> Kirjava: allow big blind to check before starting the round (6 hours ago)
+19:51 <&nibblr> Kirjava: add raise and allin (6 hours ago)
+timers
 ~> 'e'.repeat(1e9) bug
-
-enable/disable ~nick
-print.log add depth
 ====
 
 IRC.runCommand
+tinyurl the url (crc32)
 specify regex for command name
 set request content type url bug https://arin.ga/BXMkyl
 strip only starred commands for github ?
