--- a/todo
+++ b/todo
@@ -2,6 +2,7 @@ reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 // TODO //
 ~pipe
+~repaste
 IRC.auth
 multiple triggers
 use WZRD.in for modules
