--- a/todo
+++ b/todo
@@ -1,8 +1,8 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 // TODO //
+mock fs
 comandFns.where();
-require() via parsing requires and async requiring before running the code
 ~pipe
 ~repaste
 IRC.auth
