--- a/todo
+++ b/todo
@@ -1,6 +1,9 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 // TODO //
+add print limit to get envinronment to limit event callback spam
+hide cannot find module messages
+throttle print
 merge getChannelConfig and .get
 _.deburr for title parser
 useState/loadObject() alternative
@@ -8,7 +11,6 @@ comandFns.where();
 ~pipe
 IRC.auth
 multiple triggers
-use WZRD.in for modules
 timers
 ~> 'e'.repeat(1e9) bug
 IRC.runCommand
