--- a/todo
+++ b/todo
@@ -2,6 +2,7 @@ reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 // TODO //
 ~chess
+/usr/share/dict/words API
 set default line limit to 10
 add print limit to get envinronment to limit event callback spam
 hide cannot find module messages
