--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 // TODO //
-support multiple protocols in frontend (http/https)
+support multiple protocols in frontend (ws/wss just use //)
+~golf
 ~chess
 /usr/share/dict/words IRC.wordList Array
 set default line limit to 10
