--- a/todo
+++ b/todo
@@ -1,12 +1,9 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
-v3: bouncer to stop join/part, main exec, container
-
 // TODO //
-~> 'e'.repeat(1e9) bug
- eval('['+'.'.repeat(1e9)+']')
+nick/hash hash should wrap a full piece of text and nick should auto brackets and take more options
+ESM
 IRC.runCommand
-sum of 10000 * <size of best solution> / <size of your solution> for each problem (19 hours ago)
 provide a message when downloading from npm
 docs
 http push /
