--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 // TODO //
-sleep(1)
+fix function + method inspect
 fetchSync type=dom
 node.updateConfig
 IRC.runCommand
@@ -10,15 +10,13 @@ IRC.secrets
 nick/hash hash should wrap a full piece of text and nick should auto brackets and take more options
 provide a message when downloading from npm
 docs
+change command db to JSON
 http push /
 updateConfig / merge getChannelConfig and .get
 SyntaxError displays wrong
-change command db to JSON
-omit commands (triggers) from log
 index db
 ~chess
 add print limit to get envinronment to limit event callback spam
-throttle print
 _.deburr for title parser
 useState/loadObject() alternative
 comandFns.where();
