--- a/todo
+++ b/todo
@@ -1,14 +1,18 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
 
 version 4: data scoping & ORM
+make events more powerful, restrict how they're created -> current event API is bad
+s/thing/thing hooks
 
 // TODO //
+global log function
+~docs parses the markdown
 IRC.commandFns.delete|lock|star -> uses sudo
 ~poll
 IRC.runCommand
-module.paste
 fix store.namespace
 command.pasteTo pasteFrom
+blackjack
 command.add
 fix function + method inspect
 node.updateConfig
