--- a/todo
+++ b/todo
@@ -8,10 +8,13 @@ sort out indexing on tables
 
 isolated-vm need swap sometimes to work https://linuxize.com/post/create-a-linux-swap-file/
 
+adjust isolated-vm timeout
+
 Timeout.js - Can pause isolate exec time, but needs a  max execution time to defeat while 1 require fs
 
 // TODO //
-lag log 250ms
+document sleep
+update config
 configurable wss URL
 stub fs as a require module
 neovim (rust?) plugin for editing commands
@@ -43,7 +46,6 @@ useState/loadObject() alternative
 comandFns.where();
 ~pipe
 multiple triggers
-timers
 tinyurl the url (crc32)
 specify regex for command name
 set request content type url bug https://arin.ga/BXMkyl
