--- a/todo
+++ b/todo
@@ -14,6 +14,7 @@ Timeout.js - Can pause isolate exec time, but needs a  max execution time to def
 
 // TODO //
 document sleep
+fetchSync.dom
 FormData URLSearchParams Headers
 update config
 configurable wss URL
