--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ trigger commands when not even at start of message
 sort out indexing on tables
 
 // TODO //
+make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
 web stats
 bundle webpack assets statically
