--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
+rs|clojure|vlang
 
 version 4: data scoping & ORM
 make events more powerful, restrict how they're created -> current event API is bad
