--- a/TODO
+++ b/TODO
@@ -9,8 +9,8 @@ trigger commands when not even at start of message
 // TODO //
 make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
-web stats
 bundle webpack assets statically
+IRC.requestLines
 FormData URLSearchParams { form }
 arcsecond command parser
 require('jsdom|lodash|date-fns') + 'Downloading from npm'
