playing about with relations

--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
 bundle webpack assets statically
 combine action / notice / print lineLimit
+uno
 IRC.requestLines
 FormData URLSearchParams { form }
 arcsecond command parser
