--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ version 4: data scoping & ORM
 make events more powerful, restrict how they're created -> current event API is bad
 s/thing/thing hooks ~event.message (disable errors?) - fetchURL / memo / remind
 trigger commands when not even at start of message
+fork node-irc
 
 // TODO //
 make repl-only a per channel config (4 hours ago)
