--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ trigger commands when not even at start of message
 fork node-irc
 
 // TODO //
+command.deprecated
 make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
 bundle webpack assets statically
