--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
 sudo: reboot|git|update|join|part|mode|topic|kick|nick|redirect|ignore
-repl: rs|clojure|vlang|cj|scheme
+repl: rs|clojure|vlang|cj|scheme|jsx|html
 
 version 4: data scoping & ORM
 make events more powerful, restrict how they're created -> current event API is bad
 s/thing/thing hooks ~event.message (disable errors?) - fetchURL / memo / remind
 trigger commands when not even at start of message
 fork node-irc
+print streams
 
 // TODO //
 command.deprecated
+bundling...
 make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
 bundle webpack assets statically
