--- a/TODO
+++ b/TODO
@@ -6,11 +6,10 @@ make events more powerful, restrict how they're created -> current event API is 
 s/thing/thing hooks ~event.message (disable errors?) - fetchURL / memo / remind
 trigger commands when not even at start of message
 fork node-irc
-print streams | built in pipe
+print streams | built in pipe | IRC.runCommand()
 
 // TODO //
 command.deprecated
-bundling...
 character limit
 make repl-only a per channel config (4 hours ago)
 use a proxy for the config (!)
